kubernetes/services/paperless-ngx/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: paperless-ngx
  labels:
    app: paperless-ngx
    type: documents
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
